--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset= "utf-8">
 	<title>soomething</title>
 </head>
 <body>
+	<header> this is the header part do u get me??<nav>links to othyer part of website</nav>//</header>
 	<h1>hey brotherssss</h1>
+	<p id= 'hey'> yessu</p>
+	<a href="mailto:abhishekmudaliarbelgaum2gmail.com">f  </a> <br><span>heyyyy</span>
+	<div>
+		<h2>list im using </h2>
+		<ol>
+		<li>milk</li>
+		<li>butter</li>
+		<li>biscuits
+			<ul>
+				<li>marie</li>
+				<li>milkbikies</li>
+			</ul>
+		</li>
+
+		</ol>
+		<p>Paragraphs are the building blocks of papers. Many students define paragraphs in terms of length: a paragraph is a group of at least five sentences, a paragraph is half a page long, etc. In reality, though, the unity and coherence of ideas among sentences is what constitutes a paragraph. A paragraph is defined as “a group of sentences or a single sentence that forms a unit” (Lunsford and Connors 116). Length and appearance do not determine whether a section in a paper is a paragraph. For instance, in some styles of writing, particularly journalistic styles, a paragraph can be just one sentence long. Ultimately, a paragraph is a sentence or group of sentences that support one main idea. In this handout, we will refer to this as the “controlling idea,” because it controls what happens in the rest of the&nbsp;paragraph.
+		</p>
+		<a href="https://writingcenter.unc.edu/tips-and-tools/paragraphs/">heheh opens some page</a>
+
+
+
+
+	</div>
+	<footer>
+	footern pa thisss issss</footer>
+	
 
 </body>
 </html>
